:hammer: removed unnecessary dependencies from pom.xml